// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Items rendering it renders loading icons 1`] = `
<Component
  fields={
    Array [
      Object {
        "description": "NETWORK_EVENTS",
        "key": "networkEvents",
        "value": null,
      },
    ]
  }
  isLoading={true}
/>
`;

exports[`Card Items rendering it renders the default widget 1`] = `
<Component
  fields={
    Array [
      Object {
        "description": "NETWORK_EVENTS",
        "key": "networkEvents",
        "value": null,
      },
    ]
  }
  isLoading={false}
/>
`;
